vault backup: 2026-09-02 19:53:28